syntax = "proto3";

enum PFPacketType {
    NONE = 0;
    
    C_CREATE_SESSION = 10;

    C_SET_PLAYERS = 11;
    C_SET_MONSTERS = 12;
    C_SET_PLAYER_DEST = 13;
    C_SET_MONSTER_DEST = 14;

    S_PLAYER_LOCATION_UPDATE = 31;
    S_MONSTER_LOCATION_UPDATE = 32;
}

// ----- IN -----
message C_CreateSession {
    int32 dungeonCode = 1;
}

message C_SetPlayers {
    map<string, uint32> players = 1;
}

message C_SetMonsters {
    map<uint32, uint32> monsters = 1;
}

message C_SetPlayerDest {
    string playerId = 1;
    optional WorldPosition pos = 2;
}

message C_SetMonsterDest {
    uint32 monsterIdx = 1;
    optional WorldPosition pos = 2;
}

// ----- OUT -----
message S_PlayersLocationUpdate {
    map<string, WorldPosition> positions = 1;
}

message S_MonstersLocationUpdate {
    map<uint32, WorldPosition> positions = 1;
}

// ----- ETC -----

message WorldPosition {
    float x = 1;
    float y = 2;
    float z = 3;
}